Wagon Data+ Home

--- a/Content/Resources/Stylesheets/StylesForHomePage.css
+++ b/Content/Resources/Stylesheets/StylesForHomePage.css
@@ -1,4 +1,4 @@
-/*<meta />*/
+﻿/*<meta />*/
 
 /*===========================================================================================================================================================
 
@@ -366,4 +366,3 @@ Styles after this point are styles that are for specific mediums. If any additio
 		width: 100%;
 	}
 }
-
