--- a/Content/Resources/Stylesheets/MainStyles.css
+++ b/Content/Resources/Stylesheets/MainStyles.css
@@ -30,7 +30,7 @@ h1
 	font-weight: normal;
 	padding-bottom: 10px;
 	margin-bottom: 8px;
-	color: #ff6b31;
+	color: #427aa9;
 }
 
 h2
@@ -149,8 +149,8 @@ MadCap|dropDown
 
 MadCap|dropDownHotspot
 {
-	color: #ff6b31;
 	font-weight: bold;
+	color: #427aa9;
 }
 
 /*==Master Page Topic Layout==*/
