Committing file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk2.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Wagon Data.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Path Data.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Goods Data.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk1.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Exceptional Transport Application.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Skins/Default/Stylesheets/Topic.micro-content.css file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Skins/Default/Stylesheets/Topic.css file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Resources/Scripts/require.config.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchTopic_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchStem_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/Search.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/HelpSystem.xml file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/HelpSystem.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Resources/Stylesheets/MainStyles.css file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/index.mcwebhelp file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/HTML5 - Top Navigation.4.log.zip

--- a/docs/Skins/Default/Stylesheets/Topic.micro-content.css
+++ b/docs/Skins/Default/Stylesheets/Topic.micro-content.css
@@ -432,15 +432,15 @@
 
 .micro-response155323006 .dropDownHotspot
 {
-	color: #ff6b31;
 	font-weight: bold;
+	color: #427aa9;
 	text-decoration: none;
 }
 
 .micro-response155323006 .dropDownHotspot:link
 {
-	color: #ff6b31;
 	font-weight: bold;
+	color: #427aa9;
 	text-decoration: none;
 }
 
