--- a/docs/Content/Resources/Stylesheets/MainStyles.css
+++ b/docs/Content/Resources/Stylesheets/MainStyles.css
@@ -32,7 +32,7 @@ h1
 	font-weight: normal;
 	padding-bottom: 10px;
 	margin-bottom: 8px;
-	color: #ff6b31;
+	color: #427aa9;
 }
 
 h2
@@ -151,8 +151,8 @@ MadCap|dropDown
 
 MadCap|dropDownHotspot
 {
-	color: #ff6b31;
 	font-weight: bold;
+	color: #427aa9;
 }
 
 /*==Master Page Topic Layout==*/
