--- a/docs/Skins/Default/Stylesheets/Topic.css
+++ b/docs/Skins/Default/Stylesheets/Topic.css
@@ -432,15 +432,15 @@ a.glossaryTerm
 
 .dropDownHotspot
 {
-	color: #ff6b31;
 	font-weight: bold;
+	color: #427aa9;
 	text-decoration: none;
 }
 
 .dropDownHotspot:link
 {
-	color: #ff6b31;
 	font-weight: bold;
+	color: #427aa9;
 	text-decoration: none;
 }
 
