Committing file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Out-of-Gauge Load/Remarks to Critical Points.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other Exceptional Consignments/Transhipment.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchStem_Chunk1.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Exceptional Consignments/Project Scope.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Exceptional Consignments/Participants.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Exceptional Consignments/Documents.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Exceptional Consignments/Definition.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk2.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Wagon Data.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Path Data.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Goods Data.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk1.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Skins/Default/Stylesheets/Topic.micro-content.css file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Skins/Default/Stylesheets/Topic.css file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Resources/Scripts/require.config.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/Tocs/Master_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchUrl_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchTopic_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchStem_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/Search.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/HelpSystem.xml file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/HelpSystem.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/do

--- a/docs/Skins/Default/Stylesheets/Topic.css
+++ b/docs/Skins/Default/Stylesheets/Topic.css
@@ -465,6 +465,43 @@ a.glossaryTerm
 	text-decoration: none;
 }
 
+.glossaryTerm
+{
+	font-weight: bold;
+	color: Olive;
+}
+
+.glossaryTerm:link
+{
+	font-weight: bold;
+	color: Olive;
+}
+
+.MCTextPopup_Open.MCTextPopupHotSpot_
+{
+	background-position: right;
+	background-image: url('ExpandingOpen.gif');
+	padding-right: 1px;
+	padding-left: 0;
+}
+
+.MCTextPopup_Closed.MCTextPopupHotSpot_
+{
+	background-position: right;
+	background-image: url('ExpandingClosed.gif');
+	padding-right: 0px;
+	padding-left: 0;
+}
+
+.popupBody
+{
+	color: #000000;
+	background-color: #dcdcdc;
+	border: solid 1px #000000;
+	margin: 0px;
+	padding: 5px;
+}
+
 .MCWebHelpFramesetLink a
 {
 	
