Committing file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Out-of-Gauge/Vehicle Gague.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Out-of-Gauge/Structure Gauge.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Out-of-Gauge/Remarks to Critical Points.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Out-of-Gauge/Outline Procedure.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Out-of-Gauge/Loading Gauge.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Out-of-Gauge/Critical Points.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Out-of-Gauge/Combined Transport.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other/Transhipment.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other/Special Technical Vehicles.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other/Rigid Load Units.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other/Other National Rules.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other/Lack of Interoperability.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other/Handover to Ferry.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other/Flexible Load Units.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Heavy/No Details on Load Limits.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Heavy/Load on Bogies With More Than Three Axles .htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Heavy/Excess to Load Limit.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Heavy/Exceeded Line's Category.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Handy/Tips.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Handy/PDF Downloads.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Handy/FAQs.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk3.js file:///

--- a/docs/Skins/Default/Stylesheets/Topic.css
+++ b/docs/Skins/Default/Stylesheets/Topic.css
@@ -430,41 +430,6 @@ a.glossaryTerm
 	opacity: 0;
 }
 
-.dropDownHotspot
-{
-	font-weight: bold;
-	color: #427aa9;
-	text-decoration: none;
-}
-
-.dropDownHotspot:link
-{
-	font-weight: bold;
-	color: #427aa9;
-	text-decoration: none;
-}
-
-.MCDropDown_Open .MCDropDownHotSpot_.MCHotSpotImage
-{
-	background-position: left;
-	background-image: url('arrow-down-gray.png');
-	padding-left: 0px;
-	padding-right: 0;
-}
-
-.MCDropDown_Closed .MCDropDownHotSpot_.MCHotSpotImage
-{
-	background-position: left;
-	background-image: url('arrow-right-gray.png');
-	padding-left: 0px;
-	padding-right: 0;
-}
-
-.dropDownHead
-{
-	text-decoration: none;
-}
-
 .glossaryTerm
 {
 	font-weight: bold;
@@ -500,6 +465,73 @@ a.glossaryTerm
 	border: solid 1px #000000;
 	margin: 0px;
 	padding: 5px;
+}
+
+.xref
+{
+	color: #2D8DCC;
+	font-weight: bold;
+	text-decoration: underline;
+}
+
+.xref:hover
+{
+	color: #19b9f3;
+}
+
+.popupHead
+{
+	color: blue;
+}
+
+.popupHead:link
+{
+	color: blue;
+}
+
+.MCTextPopupArrow
+{
+	border-bottom-color: #dcdcdc;
+}
+
+.MCTextPopupBodyBottom .MCTextPopupArrow
+{
+	border-top-color: #dcdcdc;
+}
+
+.dropDownHotspot
+{
+	font-weight: bold;
+	color: #427aa9;
+	text-decoration: none;
+}
+
+.dropDownHotspot:link
+{
+	font-weight: bold;
+	color: #427aa9;
+	text-decoration: none;
+}
+
+.MCDropDown_Open .MCDropDownHotSpot_.MCHotSpotImage
+{
+	background-position: left;
+	background-image: url('arrow-down-gray.png');
+	padding-left: 0px;
+	padding-right: 0;
+}
+
+.MCDropDown_Closed .MCDropDownHotSpot_.MCHotSpotImage
+{
+	background-position: left;
+	background-image: url('arrow-right-gray.png');
+	padding-left: 0px;
+	padding-right: 0;
+}
+
+.dropDownHead
+{
+	text-decoration: none;
 }
 
 .MCWebHelpFramesetLink a
