Committing file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk5.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk4.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Heavy/Heavy.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Out-of-Gauge/Vehicle Gague.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Out-of-Gauge/Outline Procedure.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Out-of-Gauge/Loading Gauge.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other/Transhipment.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other/Rigid Load Units.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other/Handover to Ferry.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Content/Other/Flexible Load Units.htm file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk3.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchStem_Chunk1.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk2.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk1.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Skins/Default/Stylesheets/Topic.micro-content.css file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Skins/Default/Stylesheets/Topic.css file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Resources/Scripts/require.config.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/Tocs/Master_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/Tocs/Master.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchUrl_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchTopic_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchStem_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/SearchPhrase_Chunk0.js file:///C:/Dyplom/Nadzywczajne-Przewodnik_2.0/docs/Data/Search.js file:///C:/Dyplom/Nadzyw

--- a/docs/Skins/Default/Stylesheets/Topic.micro-content.css
+++ b/docs/Skins/Default/Stylesheets/Topic.micro-content.css
@@ -467,6 +467,11 @@
 	padding: 5px;
 }
 
+.micro-response155323006 .img
+{
+	max-width: 100%;
+}
+
 .micro-response155323006 .xref
 {
 	color: #2D8DCC;
